resizing height of the welcome page no longer shifts elements upward

--- a/client/src/pages/welcome/welcome.css
+++ b/client/src/pages/welcome/welcome.css
@@ -6,27 +6,21 @@
 }
 
 .wrapper {
-    background: #50a3a2;
-    background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-	background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-	background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
-	background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
-
-    position: absolute;
-    top: 50%;
-	left: 0;
-	width: 100%;
-	height: 400px;
-	margin-top: -200px;
-	overflow: hidden;
+	position: relative;
+    width: 100%;
 }
 
 .container {
-    max-width: 600px;
-	margin: 0 auto;
-	padding: 80px 0;
-	height: 400px;
+	max-width: 600px;
+	background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+	background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+	background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+	background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+	margin: 0;
 	text-align: center;
+	overflow: hidden;
+	width: 100%;
+	min-width: 100%;
 }
 
 .welcome-title {
